--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 				<span class="image"><a href="http://thetatauucr.com"> <img src="images/sp/tt.png" width="200px" alt="tt logo" /></a></span><br><br>
 				<span class="image"><a href="http://ieee.ee.ucr.edu/"> <img src="images/sp/ieee.png" width="150px" alt="ieee logo" /></a></span><br><br>
 				<span class="image"><a href="http://acm.cs.ucr.edu/"> <img src="images/sp/acm.png" width="150px" alt="acm logo" /></a></span><br><br>
-				<span class="image"><a href="http://github.com/"> <img src="images/sp/github.png" width="150px" alt="gh logo" /></a></span><br><br>
+				<!-- <span class="image"><a href="http://github.com/"> <img src="images/sp/github.png" width="150px" alt="gh logo" /></a></span><br><br> -->
 				<span class="image"><a href="http://www.screenflowdesign.com/"> <img src="images/sp/sf.jpg" width="150px" alt="sf logo" /></a></span>
 				<br><br>
 				<h3>Interested in sponsoring? <a href="mailto:jpham035@ucr.edu?Subject=InventathonSponsorship" target="_top">Contact us!</a><h3>
